<resources>
    <string name="app_name">Send And Solve</string>

    <string name="trying_to_open_the_file">Trying to open the file</string>
    <string name="unauthorized_file_access">Unauthorized file access</string>
    <string name="modification_of_the_file">Modification of the file</string>
    <string name="deleting_the_file">Removing the file</string>
    <string name="critical_event">CRITICAL EVENT</string>

    <string name="creating_task">Creating task</string>
    <string name="name_task_hint"> <font size="24">Title</font> </string>
    <string name="description_task_hint"> <font size="20">Description</font> </string>
    <string name="status_task_hint">Status</string>
    <string name="priority_task_hint">Priority</string>
    <string name="scope_task_hint">Category</string>
    <string name="start_date_hint">Start date</string>
    <string name="end_date_hint">End date</string>
    <string name="start_time_hint">Start time</string>
    <string name="end_time_hint">End time</string>
    <string name="from_datetime">From</string>
    <string name="to_datetime">To</string>
    <string name="tags_task_hint">Tags</string>
    <string name="child_tasks_hint">Child tasks</string>
    <string name="executors">Executors</string>
    <string name="task_was_saved">The task was saved</string>

    <string name="error_auth_required">Authentication required</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat the password</string>
    <string name="nickname_hint">Nickname</string>

    <string name="login_is_not_long_enough">The username must be longer than 5 characters</string>
    <string name="login_is_to_long">The login must be no longer than 256 characters</string>
    <string name="password_is_not_long_enough">The password must be no shorter than 8 characters</string>
    <string name="password_is_to_long">The password must be no longer than 128 characters</string>
    <string name="passwords_dont_match">The passwords don\'t match</string>
    <string name="nickname_is_not_long_enough">The alias must be longer than 2 characters</string>
    <string name="nickname_is_to_long">The alias must be no longer than 256 characters</string>

    <string name="error_positive_button">Repeat</string>
    <string name="error_negative_button">Log out</string>
    <string name="first_time">Don`t have an account?</string>
    <string name="register">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>

    <string name="start_date_cannot_be_later_end">The start date cannot be later than the end</string>
    <string name="end_date_cannot_be_earlier_start">The end date cannot be earlier than the start</string>
    <string name="end_date_cannot_be_equal_start">The end date and time cannot be equal start</string>

    <string name="status_NEW">New</string>
    <string name="status_IN_PROGRESS">In progress</string>
    <string name="status_ON_HOLD">On hold</string>
    <string name="status_COMPLETED">Completed</string>
    <string name="status_CANCELLED">Cancelled</string>

    <string name="priority_CRITICAL">Important and urgent</string>
    <string name="priority_STRATEGIC">Important, but not urgent</string>
    <string name="priority_TACTICAL">Urgent, but not important</string>
    <string name="priority_BACKGROUND">Neither important, nor urgent</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="plus">+</string>

    <string name="select_tags">Select tags</string>
    <string name="create_tag">Create tag</string>
    <string name="delete_selected_tag">Delete selected tag?</string>
    <string name="select_tasks">Select tasks</string>
    <string name="select_executors">Select executors</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>

    <string name="user_was_not_found">The user was not found</string>
    <string name="you_want_delete_selected_tag">Are you sure you want to delete the selected tag?</string>
    <string name="tag_search">Tag search</string>
    <string name="task_search">Task search</string>
</resources>